graph information added on map feature click

--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -388,317 +388,40 @@
             </div>
           </div>
           <!-- Table for 5 days weather forecast data -->
-          <div class="container-fluid px-4">
-            <div class="row mb-4">
-              <div class="col-lg-6">
-                <div class="card row-eq-height">
-                  <div class="card-header">
-                    <i class="fas fa-chart-bar me-1"></i>
+          <div class="container-fluid px-4 mb-4" id="forecat-info-div">
+            <div class="card">
+              <div class="card-header">
+                <span class="pull-right clickable close-icon float-end" data-effect="fadeOut"><i class="fa fa-times"></i></span>
+              </div>
+              <div class="row">              
+                <div class="col-lg-6">
+                  <div class="card row-eq-height">
+                    <div class="card-header">
+                      <i class="fa fa-table me-1"></i>                    
+                    </div>
+                    <div class="card-body" id="forecast-table">                  
+                    </div>
                   </div>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      Weather Forecast of {DistrictName}
-                    </h4>
-                    <p class="card-description">
-                      For Date: {start_date} to {end_date}
-                    </p>
-                    <div class="table-responsive">
-                      <table
-                        id="forecast-data-table"
-                        class="table table-striped align-middle"
-                      >
-                        <tbody>
-                          <tr class="td-days">
-                            <th scope="row" class="header-left">
-                              <span class="legend-left">Day & Date</span>
-                              <span class="legend-right">
-                                <i class="fa-regular fa-calendar-days"></i>
-                              </span>
-                            </th>
-                            <td
-                              class="sticky-title-wrapper"
-                              data-day="2023-10-11"
-                            >
-                              <div
-                                class="sticky-title"
-                                data-daydiv="2023-10-11"
-                              >
-                                Wednesday 11
-                              </div>
-                            </td>
-                            <td
-                              class="sticky-title-wrapper"
-                              data-day="2023-10-12"
-                            >
-                              <div
-                                class="sticky-title"
-                                data-daydiv="2023-10-12"
-                              >
-                                Thursday 12
-                              </div>
-                            </td>
-                            <td
-                              class="sticky-title-wrapper"
-                              data-day="2023-10-13"
-                            >
-                              <div
-                                class="sticky-title"
-                                data-daydiv="2023-10-13"
-                              >
-                                Friday 13
-                              </div>
-                            </td>
-                            <td
-                              class="sticky-title-wrapper"
-                              data-day="2023-10-14"
-                            >
-                              <div
-                                class="sticky-title"
-                                data-daydiv="2023-10-14"
-                              >
-                                Saturday 14
-                              </div>
-                            </td>
-                            <td
-                              class="sticky-title-wrapper"
-                              data-day="2023-10-15"
-                            >
-                              <div
-                                class="sticky-title"
-                                data-daydiv="2023-10-15"
-                              >
-                                Sunday 15
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="td-icon">
-                            <th scope="row" class="header-left"></th>
-                            <td>
-                              <img
-                                src="../../assets/weather_icon/windy_1.png"
-                                srcset="
-                                  ../../assets/weather_icon/windy_1.png 2x
-                                "
-                              />
-                            </td>
-                            <td>
-                              <img
-                                src="../../assets/weather_icon/windy_2.png"
-                                srcset="
-                                  ../../assets/weather_icon/windy_2.png 2x
-                                "
-                              />
-                            </td>
-                            <td>
-                              <img
-                                src="../../assets/weather_icon/windy_3.png"
-                                srcset="
-                                  ../../assets/weather_icon/windy_3.png 2x
-                                "
-                              />
-                            </td>
-                            <td>
-                              <img
-                                src="../../assets/weather_icon/windy_1.png"
-                                srcset="
-                                  ../../assets/weather_icon/windy_1.png 2x
-                                "
-                              />
-                            </td>
-                            <td>
-                              <img
-                                src="../../assets/weather_icon/windy_2.png"
-                                srcset="
-                                  ../../assets/weather_icon/windy_2.png 2x
-                                "
-                              />
-                            </td>
-                          </tr>
-                          <tr class="td-tempMax">
-                            <th scope="row" class="header-left">
-                              <span class="legend-left">Temp. Max</span
-                              ><span class="legend-right metric-clickable">
-                                (°C) <i class="fa-solid fa-temperature-high"></i
-                              ></span>
-                            </th>
-                            <td class="day-end">22°</td>
-                            <td class="day-end">22°</td>
-                            <td class="day-end">20°</td>
-                            <td class="day-end">21°</td>
-                            <td class="day-end">21°</td>
-                          </tr>
-                          <tr class="td-tempMin">
-                            <th scope="row" class="header-left">
-                              <span class="legend-left">Temp. Min</span
-                              ><span class="legend-right metric-clickable">
-                                (°C) <i class="fa-solid fa-temperature-high"></i
-                              ></span>
-                            </th>
-                            <td>4</td>
-                            <td>2</td>
-                            <td>2</td>
-                            <td>3</td>
-                            <td>0</td>
-                          </tr>
-                          <tr class="td-rain">
-                            <th scope="row" class="header-left">
-                              <span class="legend-left">Rainfall</span
-                              ><span class="legend-right metric-clickable">
-                                (mm) <i class="fa-solid fa-cloud-rain"></i
-                              ></span>
-                            </th>
-                            <td class="day-end">1</td>
-                            <td class="day-end">2</td>
-                            <td class="day-end">3</td>
-                            <td class="day-end">4</td>
-                            <td class="day-end">5</td>
-                          </tr>
-                          <tr class="td-windSpeed">
-                            <th scope="row" class="header-left">
-                              <span class="legend-left">Wind</span
-                              ><span class="legend-right">
-                                (m/s) <i class="fa-solid fa-wind"></i
-                              ></span>
-                            </th>
-                            <td
-                              style="
-                                background: linear-gradient(
-                                  to right,
-                                  rgb(0, 211, 224),
-                                  rgb(0, 224, 172),
-                                  rgb(23, 205, 254)
-                                );
-                              "
-                            >
-                              9
-                            </td>
-
-                            <td
-                              style="
-                                background: linear-gradient(
-                                  to right,
-                                  rgb(0, 211, 224),
-                                  rgb(0, 224, 172),
-                                  rgb(23, 205, 254)
-                                );
-                              "
-                            >
-                              8
-                            </td>
-                            <td
-                              style="
-                                background: linear-gradient(
-                                  to right,
-                                  rgb(0, 211, 224),
-                                  rgb(0, 224, 172),
-                                  rgb(23, 205, 254)
-                                );
-                              "
-                            >
-                              5
-                            </td>
-                            <td
-                              style="
-                                background: linear-gradient(
-                                  to right,
-                                  rgb(0, 211, 224),
-                                  rgb(0, 224, 172),
-                                  rgb(23, 205, 254)
-                                );
-                              "
-                            >
-                              7
-                            </td>
-                            <td
-                              style="
-                                background: linear-gradient(
-                                  to right,
-                                  rgb(0, 211, 224),
-                                  rgb(0, 224, 172),
-                                  rgb(23, 205, 254)
-                                );
-                              "
-                            >
-                              7
-                            </td>
-                          </tr>
-                          <tr class="td-windDir">
-                            <th scope="row" class="header-left">
-                              <span class="legend-left">Wind Dir.</span
-                              ><span class="legend-right">
-                                <i class="fa-solid fa-flag"></i
-                              ></span>
-                            </th>
-                            <!-- Data -->
-                            <td>
-                              <div class="">
-                                <i
-                                  class="fa-solid fa-right-long"
-                                  data-fa-transform="rotate--50"
-                                ></i>
-                              </div>
-                            </td>
-                            <td>
-                              <div
-                                style="
-                                  transform: rotate(2deg);
-                                  -webkit-transform: rotate(2deg);
-                                "
-                              >
-                                4
-                              </div>
-                            </td>
-                            <td>
-                              <div
-                                style="
-                                  transform: rotate(1deg);
-                                  -webkit-transform: rotate(1deg);
-                                "
-                              >
-                                4
-                              </div>
-                            </td>
-                            <td>
-                              <div
-                                style="
-                                  transform: rotate(1deg);
-                                  -webkit-transform: rotate(1deg);
-                                "
-                              >
-                                4
-                              </div>
-                            </td>
-                            <td>
-                              <div
-                                style="
-                                  transform: rotate(1deg);
-                                  -webkit-transform: rotate(1deg);
-                                "
-                              >
-                                4
-                              </div>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
+                </div>
+                <!-- Combine Graph -->
+                <div class="col-lg-6">
+                  <div class="card row-eq-height">
+                    <div class="card-header">
+                      <i class="fas fa-chart-bar me-1"></i>     
+                    </div>
+                    <div class="card-body">
+                      <figure class="highcharts-figure overflow-auto">
+                        <div id="container_forecast"></div>
+                      </figure>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6">
-                <div class="card row-eq-height">
-                  <div class="card-header">
-                    <i class="fas fa-chart-pie me-1"></i>
-                    <!-- Pie Chart Example -->
-                  </div>
-                  <div class="card-body">
-                    <figure class="highcharts-figure overflow-auto">
-                      <div id="container_forecast"></div>
-                    </figure>
-                  </div>
-                </div>
-              </div>
             </div>
+          </div>
+          <!-- Popover info of map feature -->
+          <div class="popover-information">
+            <p id="popover-text"></p>            
           </div>
 
           <!-- Loader Animation -->
