weather layer added

--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -345,6 +345,7 @@
                               value="all-taluka-rainfall"
                               name="weather-forecast"
                               for="forecast-rainfall"
+                              checked
                             /><span>Rainfall</span>
                           </label>
                         </div>
@@ -377,7 +378,7 @@
                       </div>
                       <div class="col-xl-6 col-lg-6">
                         <div
-                          class="cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
+                          class="btn-grad cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
                         >
                           <label class="cursor-pointer fw-bold">
                             <input
@@ -386,11 +387,12 @@
                               value="all-taluka-rainfall"
                               name="weather-forecast-day"
                               for="forecast-day1"
+                              checked
                             /><span>Day 1</span>
                           </label>
                         </div>
                         <div
-                          class="cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
+                          class="btn-grad cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
                         >
                           <label class="cursor-pointer fw-bold">
                             <input
@@ -403,7 +405,7 @@
                           </label>
                         </div>
                         <div
-                          class="cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
+                          class="btn-grad cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
                         >
                           <label class="cursor-pointer fw-bold">
                             <input
@@ -416,7 +418,7 @@
                           </label>
                         </div>
                         <div
-                          class="cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
+                          class="btn-grad cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
                         >
                           <label class="cursor-pointer fw-bold">
                             <input
@@ -429,7 +431,7 @@
                           </label>
                         </div>
                         <div
-                          class="cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
+                          class="btn-grad cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
                         >
                           <label class="cursor-pointer fw-bold">
                             <input
@@ -441,6 +443,7 @@
                             /><span>Day 5</span>
                           </label>
                         </div>
+                        <div class="box"></div>
                       </div>
                     </div>
                   </div>
@@ -459,6 +462,7 @@
               ></div>
             </div>
           </div>
+          <div id="info">&nbsp;</div>
           <!-- Table for 5 days weather forecast data -->
           <div class="container-fluid px-4 mb-4" id="forecast-info-div">
             <div class="card">
