--- a/html/weather-services/old-forecast.html
+++ b/html/weather-services/old-forecast.html
@@ -713,6 +713,6 @@
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.maptiler.com/ol-mapbox-style/v4.3.1/olms.js"></script>
-    <script src="js/forecast.js"></script>
+    <script src="../../js/weather-service-js/ref-weather-forecast.js"></script>
 </body>
 </html>
