--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -333,7 +333,7 @@
                   <div class="accordion-body">
                     <!-- Radio Button Div -->
                     <div class="row">
-                      <div class="col-xl-6 col-lg-6">
+                      <div class="col-xl-6 col-lg-6" id="weather-params">
                         <div
                           class="cat checkbox-checked col-xl-4 col-lg-4 col-md-4"
                         >
@@ -374,7 +374,7 @@
                           </label>
                         </div>
                       </div>
-                      <div class="col-xl-6 col-lg-6">
+                      <div class="col-xl-6 col-lg-6" id="day-params">
                         <div
                           class="btn-grad cat checkbox-checked col-xl-2 col-md-2 col-sm-4"
                         >
@@ -385,8 +385,7 @@
                               value="day1"
                               name="weather-forecast-day"
                               for="forecast-day1"
-                              checked
-                            /><span>Day <i class="fa-solid fa-1"></i></span>
+                            /><span>Day 1</span>
                           </label>
                         </div>
                         <div
@@ -399,7 +398,7 @@
                               value="day2"
                               name="weather-forecast-day"
                               for="forecast-day2"
-                            /><span>Day <i class="fa-solid fa-2"></i></span>
+                            /><span>Day 2</span>
                           </label>
                         </div>
                         <div
@@ -412,7 +411,7 @@
                               value="day3"
                               name="weather-forecast-day"
                               for="forecast-day3"
-                            /><span>Day <i class="fa-solid fa-3"></i></span>
+                            /><span>Day 3</span>
                           </label>
                         </div>
                         <div
@@ -425,7 +424,7 @@
                               value="day4"
                               name="weather-forecast-day"
                               for="forecast-day4"
-                            /><span>Day <i class="fa-solid fa-4"></i></span>
+                            /><span>Day 4</span>
                           </label>
                         </div>
                         <div
@@ -438,7 +437,7 @@
                               value="day5"
                               name="weather-forecast-day"
                               for="forecast-day5"
-                            /><span>Day <i class="fa-solid fa-5"></i></span>
+                            /><span>Day 5</span>
                           </label>
                         </div>
                         <div
